# LIMA

./: .gitignore  AUTHORS  AlignmentTK.tex  CAHV-to-pinhole.cc  CAHV-to-pinhole.h  CMakeLists.txt  DEMManipulation.h  INSTALL  assembler.cc  assembler.h  assembler.sh  brute_force_align.cc  brute_force_pyramid.py  build.sh  build_dave.sh  combine_stats.cc  coregister.cc  coregister.h  coregister_settings_example.txt  dem2dem.cc  dem_warp.cc  display.cc  display.h  exposureTime.txt  featuresLOLA.cc  featuresLOLA.h  geotif_resample.cc  geotif_resample.h  getImagesFromBB.cc  get_imgs_from_bb_example.sh  icp.cc  icp.h  io.cc  io.h  isis.py  lidar2dem.cc  lidar2dem.sh  lidar2dem_settings_example.txt  lidar2img.cc  lidar2img.sh  (+29 more)
common/: CMakeLists.txt  Tiling.cpp  Tiling.h  Tiling_test.cpp  opencv_pds.cpp  opencv_pds.h  pc_vis.cpp  pds_read.cpp  pds_read.h  string_util.cc  string_util.h
common/tests/: CMakeLists.txt  Tiling_test.cpp  testImageList.txt  test_read.cpp  tileConfig.txt
common/tests/cmake_modules/: FindOAL.cmake
dem2dem_processing/: CMakeLists.txt  assembler.cc  assembler.h  assembler.sh  cmake_install.cmake  pyr_tiling.cc  pyr_tiling.h
dem2dem_processing/cmake_modules/: FindVisionWorkbench.cmake
docs/: AlignmentTK.tex  Makefile  common.tex  dem2dem.tex  lidar2dem.tex  lidar2img.tex  sfm.tex  stereo.tex
docs/lidar2img/: alignment.tex  conclusion.tex  coregisteration.tex  introduction.tex  problem.tex  results.tex
geotif_processing/: CMakeLists.txt  georef_correct.cc  georef_correct.sh  geotif_resample.cc  geotif_resample.h  geotif_resample.sh  geotif_resample_DEM_tile.sh  geotif_resample_DRG_tile.sh  getImagesFromBB.cc
lidar2dem_processing/: CMakeLists.txt  coregister_settings_example.txt  lidar2dem.cc  lidar2dem_config.cc  lidar2dem_config.h
lidar2dem_processing/cmake_modules/: FindASP.cmake  FindVisionWorkbench.cmake  GetLibraryList.cmake
lidar2img_processing/: CMakeLists.txt  example_lidar2img.sh  lidar2img.cc
lidar2img_processing/cmake_modules/: FindASP.cmake  FindVisionWorkbench.cmake
lidar2img_processing/data/: AS15-M-1134-hadley.cub
lidar2img_processing/scripts/: brute_force_pyramid.py  isis.py  visualize_tracks.py
lidar_tracks/: CMakeLists.txt  track_splitter.cc  tracks.cc  tracks.h  weights.h
sfm_processing/: CMakeLists.txt  FeatureExtraction.cpp  FeatureExtraction.h  PoseEstimation.cpp  PoseEstimation.h  SFM.cpp  SFM.h  Tiling.cpp  Tiling.h  mosaic.cpp  mosaic.h  sfm_config.txt  sfm_test.cpp  test3.pgm  testConfig.txt
sfm_processing/test/: test2.pgm  testConfig.txt  testImageList.txt
sfm_processing/tests/: CMakeLists.txt  FeatureExtraction_test.cpp  camera_calibration.txt  depthSfm.cpp  eucsbademo.c  kTestDepthList.txt  kTestImageList.txt  left2.pgm  left3.pgm  leftList.txt  mosaicTest.cpp  mosaic_settings.txt  right1.pgm  right2.pgm  right3.pgm  rightList.txt  sfm_test.cpp  test1.pgm  testConfig.txt  testImageList.txt  testPCList.txt
sfm_processing/tests/cmake_modules/: FindOAL.cmake  FindSBA.cmake
sfm_processing/tests/mosaicTestData/: 2P145271195MRL8500P2273L2M1.img  2P145271265MRL8500P2273R2M1.img  2P145271448MRL8500P2273L2M1.img  2P145271695MRL8500P2273R2M1.img  2P145360167MRL8500P2274L2M1.img  2P145360250MRL8500P2274R2M1.img  test-stereo-pairs.txt
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/atk/sfm/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  FeatureExtraction.h  Makefile  PoseEstimation.cpp  PoseEstimation.h  SFM.cpp  SFM.h  cmake_install.cmake  sfm_config.txt  sfm_test.cpp
src/atk/sfm/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  TestExample.cxx  TestIO.cxx  TestSomethingElse.cxx  cmake_install.cmake
stereo_processing/: CMakeLists.txt  CvSBGMStereoProcessor.cpp  CvSBGMStereoProcessor.h  CvSBGMStereoTest.cpp  CvStereoBMProcessor.cpp  CvStereoBMProcessor.h  CvStereoBMTest.cpp  CvStereoCalibration.cpp  CvStereoProcessor.cpp  CvStereoProcessor.h  CvStereoSGBMProcessor.cpp  CvStereoSGBMProcessor.h  CvStereoSGBMTest.cpp  CvStereoTest.cpp  makefile  stereo_calibration.sh  stereo_example.sh  stereo_settingsBM.txt  tiling_config.txt
stereo_processing/tests/: CMakeLists.txt  CvStereoBMTest.cpp  CvStereoCalibrationTest.cpp  CvStereoSGBMTest.cpp  CvStereoTest.cpp  left.pgm  stereo_calibration.txt  stereo_settingsBM.txt  stereo_settingsSGBM.txt
tests/: AS15-M-2327.lev1.500.cub  CMakeLists.txt  Helpers.h  M111578606RE.10mpp.cub  M111578606RE.10mpp.tif  Test_icp.cc  Test_tracks.cc  Test_util.cc  USGS_A15_Q111_LRO_NAC_DEM_26N004E_150cmp.30mpp.pslope.tif  USGS_A15_Q111_LRO_NAC_DEM_26N004E_150cmp.30mpp.tif  makefile.ross
tests/cmake_modules/: FindASP.cmake  FindVisionWorkbench.cmake
write_tracks/: Makefile  main.cpp  main.h
