cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(MY_GRAND_PROJECT)
find_package(PCL 1.5 REQUIRED)
find_package( OpenCV REQUIRED )
include_directories(${OPENCV_INCLUDE_DIRS})
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
project(sfm_project)
add_executable(sfm_test sfm_test.cpp SFM.cpp PoseEstimation.cpp FeatureExtraction.cpp ../common/Tiling.cpp)
target_link_libraries(sfm_test ${PCL_LIBRARIES})
target_link_libraries(sfm_test ${OpenCV_LIBS})

