cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(MY_GRAND_PROJECT)
find_package(PCL 1.5 REQUIRED)
find_package( OpenCV REQUIRED )
include_directories(${OPENCV_INCLUDE_DIRS})
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
project(tile_maker)
add_executable(tiling Tiling_test.cpp ../Tiling.cpp)
target_link_libraries(tiling ${OpenCV_LIBS})
project(pc_vis_project)
add_executable(pc_vis ../pc_vis.cpp)
target_link_libraries(pc_vis ${PCL_IO_LIBRARIES})
target_link_libraries(pc_vis ${PCL_VISUALIZATION_LIBRARIES})
target_link_libraries(pc_vis ${PCL_COMMON_LIBRARIES})

project(pdsReadTest_project)
set( PROJECT_SRC_DIR ".." )
set( CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules ${CMAKE_MODULE_PATH} )

#possible to edit next line in place of setting environment variable
#set(ENV{OALROOT} "~/oal")

find_package( OAL )
if( OAL_FOUND )
   include_directories(${OPENCV_INCLUDE_DIRS} ${OAL_INCLUDE_DIRS})
   add_executable(pdsReadTest test_read.cpp ../opencv_pds.cpp ../pds_read.cpp)
   target_link_libraries(pdsReadTest ${OpenCV_LIBS})
   target_link_libraries(pdsReadTest ${OAL})
endif( OAL_FOUND )

